# decksterity

./: .gitignore  Cargo.toml  Makefile  README.md  bsconfig.json  config.make  decksterity.cabal  package-lock.json  package.json  package.yaml  webpack.config.js
openframeworks/: README.md
openframeworks/src/: main.cpp  ofApp.cpp  ofApp.h
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/audio_engine/: dsp_node.rs  mod.rs
rust/src/media/: mod.rs
src/: Deck.cpp  Deck.h  Engine.cpp  Engine.h  lib.rs  main.rs  ofApp.cpp  ofApp.h  player.scd  scratch.sc
src/audio_engine/: dsp_node.rs  mod.rs
src/audio_engine/dsp_node/: player_node.rs  volume_node.rs
src/engine/: mod.rs
src/engine/dsp_node/: mod.rs  player_node.rs  volume_node.rs
src/gui/: constants.rs  deck.rs  mod.rs
src/media/: mod.rs
src/midi/: mod.rs
src/persistance/: mod.rs
src/server/: mod.rs
test/: UniverseSpec.hs
ui/: Component2.re  CssExtension.re  CssExtension.rei  Deck.re  Deck.rei  Library.re  Main.re  Page.re  Theme.re  Track.re  Track.rei  index.html
