[package]
name = "decksterity"
version = "0.1.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "decksterity"
path = "src/main.rs"

[dependencies]
# Chaining of DSP nodes (MIT)
dsp-chain = "0.13"
# FLAC decoder (Apache 2.0)
claxon = "0.4"
# MIDI processing (MIT)
midir = "0.5"
# JACK audio server client (MIT)
jack = "0.6.0-rc1"

# 2D GUI (MIT or Apache 2.0)
conrod = { version = "0.58", features = ["glium", "winit"] }
conrod_derive = "0.1"
# OpenGL wrapper (Apache 2.0
glium = "0.20"
# Window wrapper (Apache 2.0
winit = "0.11"
